   CallableStatement.executeQuery.
 o Corrected a problem in SQLParser causing an error message with the wrong
   terminator value missing (i.e. ')' instead of '}' missing from
   "{call proc(?)").
 o Corrected a problem with output parameters being defined as Unicode even
   though sendStringParametersAsUnicode=false was specified.

02/25/2005 - Alin Sinpalean
 o Added code to close the socket and release any data buffered at the socket
   level when Connection.setClosed() is called (usually on I/O or protocol
   errors).
 o Tried to disable warning messages on database and language change; these are
   always generated during login, sometimes causing confusion. Problem is,
   disabling these also disables generation of the associated ENVCHANGE packets
   making jTDS crash with NPEs because it doesn't know the current database.

02/24/2005 - Alin Sinpalean
 o Corrected bug [1150880] Character Set getting overwritten. Collation
   envchange packets altered the charset specified on connection creation.

02/23/2005 - Alin Sinpalean
 o Implemented feature [1145697] Better handling of OutOfMemoryError. On an
   OutOfMemoryError, TdsCore.nextToken() now consumes the rest of the server
   response to ensure no protocol confusion will occur.
 o Implemented feature [1144733] Make jtds.jar display version no. Now
   "java -jar jtds-1.x.jar" will display the jTDS version to standard output.

02/23/2005 - David Kilzer
 o Fix comment in ConnectionJDBC2(String, Properties) constructor.

02/22/2005 - David Kilzer
 o Added .cvsignore to top-level directory to ignore build and dist directories.

02/19/2005 - Alin Sinpalean
 o Applied patch [1122494] SQL Server Authentication & Named pipes, submitted
   by Kartik Shah. On Windows, local named pipes are always used, now, even for
   remote servers.
 o Implemented feature request [1124636] Better error message for missing
   ntlmauth.dll.

02/17/2005 - Alin Sinpalean